--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"embla-carousel-autoplay": "^8.0.1",
 		"embla-carousel-svelte": "^8.0.1",
 		"luxon": "^3.4.4",
+		"postmark": "^4.0.2",
 		"sass": "^1.74.1"
 	}
 }
