--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"@inlang/paraglide-js": "1.9.1"
 	},
 	"type": "module",
 	"dependencies": {
@@ -29,6 +30,7 @@
 		"embla-carousel-svelte": "^8.0.1",
 		"luxon": "^3.4.4",
 		"postmark": "^4.0.2",
-		"sass": "^1.74.1"
+		"sass": "^1.74.1",
+		"@inlang/paraglide-sveltekit": "0.10.2"
 	}
 }
