--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@inlang/paraglide-js": "1.9.1",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/luxon": "^3.4.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3",
-		"@inlang/paraglide-js": "1.9.1"
+		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
+		"@inlang/paraglide-sveltekit": "0.10.2",
 		"contentful": "^10.8.7",
 		"embla-carousel-auto-height": "^8.0.1",
 		"embla-carousel-autoplay": "^8.0.1",
 		"embla-carousel-svelte": "^8.0.1",
 		"luxon": "^3.4.4",
 		"postmark": "^4.0.2",
-		"sass": "^1.74.1",
-		"@inlang/paraglide-sveltekit": "0.10.2"
+		"sass": "^1.74.1"
 	}
 }
