--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/locomotive-scroll": "^4.1.3",
 		"@types/luxon": "^3.4.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
@@ -30,6 +31,7 @@
 		"embla-carousel-auto-height": "^8.0.1",
 		"embla-carousel-autoplay": "^8.0.1",
 		"embla-carousel-svelte": "^8.0.1",
+		"locomotive-scroll": "^5.0.0-beta.13",
 		"luxon": "^3.4.4",
 		"postmark": "^4.0.2",
 		"sass": "^1.74.1"
