--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"type": "module",
 	"dependencies": {
 		"@inlang/paraglide-sveltekit": "0.10.2",
+		"@sveltejs/adapter-vercel": "^6.3.1",
 		"contentful": "^10.8.7",
 		"embla-carousel-auto-height": "^8.0.1",
 		"embla-carousel-autoplay": "^8.0.1",
